[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Player/Human/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/Human/SwordHitBox.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Overlap/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Player/Human/adventurer-Sheet.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Attack1"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitBox/Attack1Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Attack2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitBox/Attack2Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordHitBox/Attack3Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fall"
length = 0.15
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=6]
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 37 ]
}

[sub_resource type="Animation" id=8]
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=9]

[sub_resource type="CapsuleShape2D" id=10]
height = 11.4937

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8.17599, 15.0088 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 15

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 11
hframes = 7
frame = 52

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack1 = SubResource( 1 )
anims/Attack2 = SubResource( 2 )
anims/Attack3 = SubResource( 3 )
anims/Die = SubResource( 4 )
anims/Fall = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Jump = SubResource( 7 )
anims/Run = SubResource( 8 )
anims/Walk = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.315563, 2.52447 )
shape = SubResource( 10 )

[node name="SwordHitBox" type="Area2D" parent="." groups=[
"hitbox",
]]
position = Vector2( 17.4388, -1.66083 )
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Attack1Collision" type="CollisionPolygon2D" parent="SwordHitBox"]
visible = false
polygon = PoolVector2Array( -19.4954, -12.2429, -10.4996, -9.15861, -5.6161, -2.47598, -5.6161, 3.82112, -8.95742, 9.09012, -15.8971, 13.2025, -13.0698, 15.0017, -2.14627, 14.6161, 6.59256, 3.5641, 6.59256, -5.30324, 0.680996, -13.528, -5.6161, -16.8693, -15.8971, -15.8412 )
disabled = true

[node name="Attack2Collision" type="CollisionPolygon2D" parent="SwordHitBox"]
visible = false
polygon = PoolVector2Array( -13.0495, -9.56124, -3.42494, 2.2722, -9.26277, 11.2656, -22.674, 11.739, -25.0407, 8.11003, -31.8252, 16.7879, -14.785, 19.4701, -2.32048, 17.1034, 3.83291, 10.6345, 4.30624, 0.694407, -1.53159, -8.61457 )
disabled = true

[node name="Attack3Collision" type="CollisionPolygon2D" parent="SwordHitBox"]
visible = false
polygon = PoolVector2Array( -22.2007, -2.77674, -1.37381, 4.95445, -3.42494, 9.21448, -14.6273, 12.8434, -25.3563, 9.8456, -35.6119, 8.89893, -40.3453, 12.8434, -30.0896, 17.1034, -7.68497, 17.419, 1.93956, 14.8945, 7.77739, 10.0034, 7.30405, 5.74334, -3.89827, -0.410048 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.315563, 2.52447 )
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="attackDelay" type="Timer" parent="."]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="attacked" from="Hurtbox" to="." method="_on_Hurtbox_attacked"]
[connection signal="attacked" from="Hurtbox" to="Stats" method="_on_Hurtbox_attacked"]
[connection signal="timeout" from="attackDelay" to="." method="_on_attackDelay_timeout"]

[editable path="Hurtbox"]
